# evalkit

./: .gitignore  CLAUDE.md  README.md  cli.py  pyproject.toml  sample_predictions.csv  sample_regression.csv
docs/plans/: 2026-02-26-evalkit-design.md  2026-02-26-textual-tui-design.md  2026-02-26-textual-tui.md
evalkit/: __init__.py  data.py  evaluator.py  types.py
evalkit/formatters/: exporters.py  rich_console.py  visualizers.py
evalkit/metrics/: classification.py  regression.py
evalkit/tui/: __init__.py  app.py  config.py  utils.py
evalkit/tui/layouts/: __init__.py  dashboard.py
evalkit/tui/widgets/: __init__.py  confusion_matrix.py  error_dialog.py  export_dialog.py  footer.py  graph_panel.py  header.py  help_screen.py  metric_formula_panel.py  metrics_table.py  samples_modal.py  summary_metrics.py
tests/: test_data.py  test_evaluator.py  test_formatters.py  test_metrics.py
tests/fixtures/: classification_binary.csv  classification_multiclass.csv  regression.csv
tests/tui/: test_integration.py  test_widgets.py
